<resources>
        <string name="app_name" translatable="false">Smart Home</string>
        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="action_settings">Settings</string>
        <string name="title_activity_lamp">LampActivity</string>
        <string name="title_activity_blind">BlindActivity</string>
        <string name="title_activity_door">DoorActivity</string>
        <string name="title_activity_settings">Settings</string>
        <string name="title_activity_oven">OvenActivity</string>
        <string name="title_activity_rutines">Routines</string>
    <string name="lamp">Lamp</string>
    <string name="color">Color</string>
    <string name="brightness">Brightness</string>
    <string name="Oven">Oven</string>
    <string name="Heat">Heat</string>
    <string name="Grill">Grill</string>
    <string name="Temperature">Temperature</string>
    <string name="Convection">Convection</string>
    <string name="ONOFF">Turn on</string>
    <string name="drawer_menu_setting">Settings</string>
        <string name="drawer_menu_rooms">Room</string>
        <string name="drawer_menu_rutines">Routines</string>
    <string name="blackErrorMessage">This field can\'t be empty</string>
    <string name="time_spinner">Receive a notification every</string>
    <string name="defaultsNotificationListTitle">Default configuration</string>
    <string name="notificationTitle">Notify me when</string>
    <string name="changeNotificationOn">Turn On</string>
    <string name="changeNotificationOff">Turn Off</string>
    <string name="changeNotificationColor">Color change</string>
    <string name="changeNotificationDimmer">Change Dimmer</string>
    <string name="noDevices">You don\'t have any devices in the room</string>
    <string name="noRooms">You don\'t have any rooms</string>
    <string name="noRoutines">You don\'t have any routine</string>
    <string name="activateButton">Activate</string>
    <string name="open">Open</string>
        <string name="close">Close</string>
        <string name="opened">Opened</string>
        <string name="closed">Closed</string>
        <string name="closing">Closing</string>
        <string name="opening">Opening</string>
        <string name="lock">Lock</string>
        <string name="unlock">Unlock</string>
        <string name="on">On</string>
        <string name="off">Off</string>
        <string name="temperature">Temperature</string>
        <string name="delete">Delete</string>
        <string name="cancel">Cancel</string>
        <string name="deleteConfirmation">Are you sure you want to delete it?</string>
        <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="timeNotification_array">
        <item>1 second</item>
        <item>5 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
    </string-array>
    <string name="oven">Oven</string>
    <string name="door">Door</string>
    <string name="blind">Blind</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="changeNotificationOpenClose">Opens or closes</string>
    <string name="changeNotificationLockUnlock">Locks or unlocks</string>
    <string name="refrigerator">Refrigerator</string>
    <string-array name="defaultDeviceNotification_array">
        <item>@string/lamp</item>
        <item>@string/oven</item>
        <item>@string/blind</item>
        <item>@string/door</item>
        <item>@string/refrigerator</item>
    </string-array>
    <string name="ping_text">Set Seconds Until Ping</string>
    <string name="done_snoozing">Done Snoozing.</string>
    <string name="seconds_default">10</string>
    <string name="reminder_label">Reminder Text</string>
    <string name="reminder_text">Don\'t forget!</string>
    <string-array name="heat_array">
        <item>@string/oven_conventional</item>
        <item>@string/oven_bottom</item>
        <item>@string/oven_top</item>
    </string-array>
    <string name="notification" translatable="false">SmartHome</string>
    <string name="label">Ping Me</string>
    <string-array name="grill_array">
        <item>@string/oven_large</item>
        <item>@string/oven_eco</item>
        <item>@string/oven_off</item>
    </string-array>
    <string name="ping">Ping!</string>
    <string name="snoozing">Snoozing!</string>
    <string name="timer_start">Setting the timer</string>
    <string name="sleep_error">Sleep failure</string>
    <string name="timer_finished">Timer finished.</string>
    <string-array name="convection_array">
        <item>@string/oven_normal</item>
        <item>@string/oven_eco</item>
        <item>@string/oven_off</item>
    </string-array>
    <string name="oven_normal">Normal</string>
    <string name="oven_eco">Eco</string>
    <string name="oven_off">Off</string>
    <string name="oven_large">Large</string>
    <string name="oven_conventional">Conventional</string>
    <string name="oven_top">Top</string>
    <string name="oven_bottom">Bottom</string>
    <string name="lock_door">Lock Door</string>
    <string name="open_door">Open Door</string>
    <string name="open_blind">Open Blind</string>
    <string name="turn_on">Turn on</string>
    <string name="turn_off">Turn off</string>
    <string name="color_change">Color change</string>
    <string name="brightness_change">Brightness change</string>
    <string name="notifyMe_blind">The blind opens or closes</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="changeNotificationHeat">Changes heat</string>
    <string name="changeNotificationConvection">Changes convection</string>
    <string name="changeNotificationTemperature">Changes temperature</string>
    <string name="changeNotificationGrill">Changes grill</string>
    <string name="refri_def">Default</string>
    <string name="refri_party">Party</string>
    <string name="refri_vacation">Vacation</string>
    <string name="refriSettings">Refrigerator Settings</string>
    <string name="lampSettings">Lamp Settings</string>
    <string name="blindSettings">Blind Settings</string>
    <string name="ovenSettings">Oven Settings</string>
    <string name="doorSettings">Door Settings</string>
    <string name="refri_mode">Mode</string>
    <string name="changeNotificationRefriTemp">Changes Refrigerator temperature</string>
    <string name="changeNotificationRefriFreezerTemp">Changes Freezer temperature</string>
    <string name="changeNotificationRefriMode">Changes mode</string>
    <string name="acStateFan">Fan speed has changed to :</string>
    <string name="acStateTurnOn">has turned on</string>
    <string name="acStateTurnOff">has turned off</string>
    <string name="acStateMode">Mode has changed to:</string>
    <string name="acStateVerticalSwing">Vertical Swing has changed to:</string>
    <string name="acStateHorizontalSwing">Horizontal Swing has changed to:</string>
    <string name="acTemperature">Temperature has changed to:</string>
    <string name="alarmStateStatus">Status has changed to :</string>
    <string name="blindStateOpen">has started to open</string>
    <string name="blindStateClose">has started to close</string>
    <string name="blindStateOpened">has been opened</string>
    <string name="blindStateClosed">has been closed</string>
    <string name="doorStateOpened">has been opened</string>
    <string name="doorStateClosed">has been closed</string>
    <string name="doorStateLocked">has been locked</string>
    <string name="doorStateUnlocked">has been unlocked</string>
    <string name="lampStateColor">Color has changed</string>
    <string name="lampStateOn">has turned on</string>
    <string name="lampStateOff">has turned off</string>
    <string name="lampStateBrightness">Brightness has changed to:</string>
    <string name="ovenStateHeat">Heat has changed to:</string>
    <string name="ovenStateGrill">Grill has changed to:</string>
    <string name="ovenStateConvection">Convection has changed to:</string>
    <string name="ovenStateOn">has turned on</string>
    <string name="ovenStateOff">has turned off</string>
    <string name="ovenStateTemperature">Temperature has changed to:</string>
    <string name="refriStateMode">Mode has changed to:</string>
    <string name="refriStateTemperature">Temperature has changed to:</string>
    <string name="refriStateFreezerTemp">Freezer temperature has changed to:</string>
    <string name="timerStateStatus">Status has changed to :</string>
    <string name="timerStateInterval">Interval has changed to :</string>
    <string name="timerStateRemaining">Remaining has changed to :</string>
    <string name="refri_freezer_temp">Freezer Temperature</string>
    <string name="refri_temp">Refrigerator Temperature</string>
    <string name="edit">Edit</string>
    <string name="deleted">Deleted</string>
    <string name="undo">Undo</string>
    <string name="rooms">Rooms</string>
    <string name="rutine">Routine</string>
    <string name="rutine_execute">has executed correctly</string>
    <string name="temperatureMinandMaxValueError">The temperature must be between 90 and 230</string>
    <string name="refriTemperatureMaxMinValue">The temperature must be between 2 and 8</string>
    <string name="freezerTemperatureMinMaxValue">The freezer temperature must be between -20 and -8</string>
    <string name="error_loading_rooms">An error has occurred while loading the rooms. Please check your Internet connection</string>
    <string name="error_getDevices">An error has occurred while loading the devices. Please check your Internet connection</string>
    <string name="error_deleteRoom">An error has occurred while deleting the room. Please check your Internet connection</string>
    <string name="error_deleteRoutine">An error has occurred while deleting the routine. Please check your Internet connection</string>
    <string name="error_deleteDevice">An error has occurred while deleting the device. Please check your Internet connection</string>
    <string name="error_getRoutines">An error has occurred while loading the routines. Please check your Internet connection</string>
    <string name="error_deviceOff">An error has occurred while turning off the device. Please check your Internet connection</string>
    <string name="error_getState">An error has occurred while loading the devices state. Please check your Internet connection</string>
    <string name="error_openDoor">An error has occurred while opening the door. Please check your Internet connection</string>
    <string name="error_closeDoor">An error has occurred while closing the door. Please check your Internet connection</string>
    <string name="error_lockDoor">An error has occurred while locking the door. Please check your Internet connection</string>
    <string name="error_unlockDoor">An error has occurred while unlocking the door. Please check your Internet connection</string>
    <string name="error_executeRoutine">An error has occurred while executing the routine. Please check your Internet connection</string>
    <string name="error_blindUp">An error has occurred while opening the blind. Please check your Internet connection</string>
    <string name="error_blindDown">An error has occurred while closing the blind. Please check your Internet connection</string>
    <string name="error_changeName">An error has occurred while changing the name. Please check your Internet connection</string>
    <string name="interval_update">Changes will take effect the next time you open the app</string>
    <string name="error_regexp1">The name must contain more than 3 characters and must contain only letters, numbers or _</string>
</resources>