<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grupo1.hci.smarthome.Activities.BlindFragment">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ToggleButton
            android:id="@+id/contentOven_Onoff_ToogleButton"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:checked="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/contentDoor_Heat_Spinner"
            android:layout_width="207dp"
            android:layout_height="39dp"
            app:layout_constraintEnd_toEndOf="@+id/contentDoor_Convection_Spinner"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <Spinner
            android:id="@+id/contentDoor_Convection_Spinner"
            android:layout_width="207dp"
            android:layout_height="39dp"
            app:layout_constraintEnd_toEndOf="@+id/contentDoor_Grill_Spinner"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <Spinner
            android:id="@+id/contentDoor_Grill_Spinner"
            android:layout_width="207dp"
            android:layout_height="39dp"
            app:layout_constraintEnd_toEndOf="@+id/contentOven_Onoff_ToogleButton"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <EditText
            android:id="@+id/contentDoor_Temperature_EditText"
            android:layout_width="208dp"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintEnd_toEndOf="@+id/contentDoor_Heat_Spinner"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/Oven"
            app:layout_constraintBaseline_toBaselineOf="@+id/contentOven_Onoff_ToogleButton"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/Heat"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/Grill"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/Convection"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/Temperature"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>
