<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical">

    <Button
        android:id="@+id/button6"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="30dp"
        android:layout_height="30dp"

        android:layout_marginEnd="10dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@android:color/holo_green_light"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <ToggleButton
        android:id="@+id/contentLamp_OnOff_toogleButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="ToggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/lamp"
        app:layout_constraintBottom_toBottomOf="@+id/contentLamp_OnOff_toogleButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/contentLamp_OnOff_toogleButton" />

    <SeekBar
        android:id="@+id/seekBar6"
        android:layout_width="174dp"
        android:layout_height="16dp"
        app:layout_constraintEnd_toEndOf="@+id/contentLamp_OnOff_toogleButton"
        app:layout_constraintTop_toTopOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/brightness"
        android:gravity="center"

        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/color"
        android:gravity="center"

        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/roundedbutton"

        android:backgroundTint="@android:color/holo_blue_light"
        app:layout_constraintEnd_toEndOf="@+id/seekBar6"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/roundedbutton"

        android:backgroundTint="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button8"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

</android.support.constraint.ConstraintLayout>

